Part2/Exercise_2.08/manifests/todo_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-namespace
  name: todo-app-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: viksil/todo_app:2.08
          imagePullPolicy: Always
