Part2/Exercise_2.08/manifests/todo_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-namespace
  name: todo-app-service
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 3012
      protocol: TCP
      targetPort: 3055
